; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena_sriov.c_abs_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena_sriov.c_abs_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_vf = type { i32, i32 }

@EFX_VI_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.efx_vf*, i32)* @abs_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @abs_index(%struct.efx_vf* %0, i32 %1) #0 {
  %3 = alloca %struct.efx_vf*, align 8
  %4 = alloca i32, align 4
  store %struct.efx_vf* %0, %struct.efx_vf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @EFX_VI_BASE, align 4
  %6 = load %struct.efx_vf*, %struct.efx_vf** %3, align 8
  %7 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.efx_vf*, %struct.efx_vf** %3, align 8
  %10 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @efx_vf_size(i32 %11)
  %13 = mul nsw i32 %8, %12
  %14 = add nsw i32 %5, %13
  %15 = load i32, i32* %4, align 4
  %16 = add i32 %14, %15
  ret i32 %16
}

declare dso_local i32 @efx_vf_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
